<resources>
    <string name="app_name">Piura Services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurar</string>
    <string name="title_activity_ubicanos">Map</string>
    <!-- acerca de-->
    <string name="action_admininfor">Acerca de</string>
    <string name="action_acercade"> App para acceder a consultar información de los servicios básicos de Luz, Agua y telefonía en la ciudad de Piura. \nPara el funcionamiento correcto de la aplicación es necesario activar sus <b>Datos</b> o conectarse a una red <b>Wi-Fi</b></string>
    <string name="action_version"><b>Version de App:</b>V 1.0</string>
    <string name="action_developer"><b>Desarrollador:</b> Kevin Quispe Rojas</string>
    <string name="action_versionso"><b>Version de Android:</b> Lolipop 5.1</string>

    <!-- datos para informacion referencial epsgtrau -->
    <string name="text_direccion_eps">Jr. La Arena y Jr. Zelaya S/N - Urb. Santa Ana, Piura</string>
    <string name="text_correo_eps">epsgrau.imageninstitucional@gmail.com</string>
    <string name="text_telefono_eps">(073) 307741</string>
    <string name="text_horario_eps">L-V 8:00am-16:00pm Sábado:8:00-12:00 Domingo Cerrado</string>
    <string name="text_web_eps">https://epsgrau.pe</string>
    <!-- datos para informacion referencial enosa -->
    <string name="text_direccion_enosa">Jirón Callao, 875, Piura - Piura</string>
    <string name="text_correo_enosa">enosa@distriluz.com.pe</string>
    <string name="text_telefono_enosa">(073) 284050</string>
    <string name="text_horario_enosa">L-V 08:00 am a 06:30pm,S-D de 8:30am a 6:30 a.m</string>
    <string name="text_web_enosa">www.distriluz.com.pe/enosa</string>
    <!-- datos para informacion referencial movistar-->
    <string name="text_direccion_movistar">AV Loreto 247 Piura</string>
    <string name="text_correo_movistar">registrocontactos@movistar.com.pe</string>
    <string name="text_telefono_movistar">(073)28-4030</string>
    <string name="text_horario_movistar">L-V  9:00am-6:00pm y sábados 9:00 am a 1:00 pm</string>
    <string name="text_web_movistar">http://www.movistar.com.pe</string>
    <!-- datos para informacion referencial claro -->
    <string name="text_direccion_claro">Tienda 39, Open Plaza Piura</string>
    <string name="text_correo_claro">clarocontactos@claro.com.pe</string>
    <string name="text_telefono_claro">946 573 918</string>
    <string name="text_horario_claro">Lunes-Domingo 11:00am a 9:00pm</string>
    <string name="text_web_claro">http://www.claro.com.pe</string>
    <!-- datos para informacion referencial entel -->
    <string name="text_direccion_entel">Jr. Libertad 607, Piura, Tienda Piura</string>
    <string name="text_correo_entel">entelcontacto@entel.com.pe</string>
    <string name="text_telefono_entel">0800 18844</string>
    <string name="text_horario_entel">L-V 9:00am a 7:00pm sábado 9:00am a 12:30pm</string>
    <string name="text_web_entel">http://www.entel.pe</string>
    <string name="text_boton_openmaps">Abrir Google Maps</string>
    <!-- Splash screen -->
    <string name="titulo_splash_servicios">Servicios Básicos</string>
    <string name="text_splash_encuantra">Consulta información de los Servicios Básicos</string>
    <string name="text_splash_luz">Luz</string>
    <string name="text_splash_telefonia">Telefonía</string>
    <string name="text_splash_agua">Agua</string>
    <string name="text_splash_deveploment">Desarrollado by KevinQR</string>
    <!-- Home primcipal -->
    <string name="title_home">Home</string>
    <string name="title_bienvenido">Bienvenido a la App Para consultar información de los servicios básicos de luz agua y telefonía en la ciudad de Piura
    </string>
    <!--drawer view-->
    <string name="title_entidades">Entidades</string>
    <string name="title_ubicanos">Ubica tu Servicio</string>
    <string name="title_contactos">Contactos</string>
    <string name="title_tramites">Tramites</string>
    <string name="title_reclamos">Reclamos</string>
    <string name="title_config">Configurar cuenta</string>
    <string name="title_acercade">Acerca de</string>
    <string name="title_comunicate">Comunicate</string>
    <string name="title_compartir">Compartir</string>
    <string name="title_salir">Salir</string>

    <!-- Home principal -->
    <string name="title_servicios_basicos">Entidades de servicios Básicos</string>
    <string name="title_activity_maps">Map</string>
    <!--activity login -->
    <string name="text_login">Iniciar sesion</string>
    <string name="text_input_email">Ingrese email</string>
    <string name="text_input_password">Ingrese password</string>
    <string name="text_register_login">Registrarse</string>
    <string name="text_input_olvidaste_password">Olvidaste tu password?</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="title_activity_register">Registrar Usuario</string>
    <!--activity register -->
    <string name="text_title_register">Registrarse</string>
    <string name="text_input_register_nombre">Ingrese nombre</string>
    <string name="text_input_register_apellidos">Ingrese apellidos</string>
    <string name="text_input_register_direccion">Ingrese dirección</string>
    <string name="text_input_register_telefono">Ingrese n° de celular</string>
    <string name="text_input_register_email">Ingrese correo</string>
    <string name="text_input_register_codigo">Ingrese código postal</string>
    <string name="text_input_register_edad">Ingrese edad</string>
    <string name="text_input_register_password">Ingrese Password</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!--activity register -->
    <string name="title_activity_inforeferencial">Informacion Referencial</string>
    <string name="title_activity_infotramites">Informacion Tramites</string>
    <string name="title_activity_inforeclamos">Informacion Reclamos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- INFORMACION DE CONTACTO EPSGRAU -->
    <string name="text_view_informacion">Información Referencial</string>
    <string name="text_view_direccion">Dirección:</string>
    <string name="text_view_telefono">Teléfono:</string>
    <string name="text_view_horario">Horario:</string>
    <string name="text_view_correo">Email:</string>
    <string name="text_view_pagina">Página Web:</string>
    <string name="text_view_tipo">Tipo de servicio:</string>
    <string name="text_view_oficina">Centro de atención</string>
    <string name="text_view_centros_atencion_epsgrau">Centros de atención Eps Grau S.A</string>
    <string name="text_view_centros_atencion_enosa">Centros de atención Enosa</string>
    <string name="text_view_centros_atencion_movistar">Centros de atención Movistar</string>
    <string name="text_view_centros_atencion_claro">Centros de atención Claro</string>
    <string name="text_view_centros_atencion_entel">Centros de atención Entel</string>
    <!-- INFORMACION DE CONTACTO ESPGRAU -->
    <string name="text_view_tramites">Información de Trámites </string>
    <string name="text_view_info_tramites">En esta sección Ud podrá consultar la siguiente información:</string>
    <string name="text_view_nombre_tramite">Lista de Trámites</string>>
    <string name="text_view_pasos_tramites">Pasos para hacer tramites</string>
    <!-- INFORMACION DE RECLAMOS -->
    <string name="text_view_info_reclamos">En esta sección Ud podrá consultar la siguiente información:</string>
    <string name="text_view_reclamos">Información de Reclamos</string>
    <string name="text_view_pasos_reclamos">Pasos para hacer reclamos</string>
    <string name="text_view_nombre_reclamo">Lista de Reclamos</string>
    <string name="text_view_pasos_mas_info">Click para mas información...</string>
    <!-- TITULOS DE LAS IMAGNES -->
    <string name="title_img_empresaepsgrau">EPS GRAU SA,Servicio de agua</string>
    <string name="title_img_empresatelefonia">Telefonía,Movistar, claro, entel</string>
    <string name="title_img_empresaenosa">Enosa, servicio de luz</string>
    <!-- TITULOS FRAGMENTES ENTIDAD RECLAMO -->
    <string name="title_entidad_reclamo">Seleccione entidad o empresa para consultar información de reclamos</string>
    <string name="title_entidad_tramite">Seleccione entidad  o empresa para consultar información de trámites</string>
    <!-- TITULOS FRAGMENTES ENTIDAD CONTACTO -->
    <string name="title_entidad_contacto">Seleccione entidad o empresa para consultar contactos y direcciones</string>

</resources>
