<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".views.activities.AcercadeActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/acercade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:text="@string/action_acercade"
        android:textAlignment="center"
        android:textStyle="italic" />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_version"
            android:textAlignment="center"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/versionandroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_versionso"
            android:textAlignment="center"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_developer"
            android:textAlignment="center"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>