<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SplashScreenActivity"
android:background="@color/colorPrimary">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_splash"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/titulo_splash_servicios"
            android:textColor="@color/colorSplasch"
            android:textSize="@dimen/txtSizeSplash"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_escudopiura"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:src="@drawable/escudo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/text_splash_encuantra"
            android:textColor="#ffff"
            android:textSize="@dimen/textoSize"
            android:layout_weight="0.06" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_splash_luz"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="@dimen/textoSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_splash_agua"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="@dimen/textoSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_splash_telefonia"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="@dimen/textoSize" />
        <ImageView
            android:id="@+id/img_mapa"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Teléfono"
            android:src="@drawable/ic_place_white_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_splash_deveploment"
                android:textColor="#ffff"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>

</FrameLayout>
