<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffe3e3e3"
    tools:context=".views.activities.EnosaActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:background="#949494"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:cardUseCompatPadding="true" >
                <GridLayout
                    android:padding="6dp"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_direccion" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Piura" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_telefono" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0737745" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_correo" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="epsgrau@epsgrau.com" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_horario" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="8:00pm- 4:00pm" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_pagina" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="www.epsgrau.pe" />
                </GridLayout>
                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_view_informacion"
                    android:layout_gravity="bottom"
                    android:background="#9e000000"
                    android:textColor="#ffe3e3e3"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:background="#949494"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/img_tramitesenosa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:onClick="onClicked"
                    android:scaleType="centerCrop" />
                <GridLayout
                    android:padding="6dp"
                    android:columnCount="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_info_tramites" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_nombre_tramite" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_pasos_tramites" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/buttonPressedColor"
                        android:text="@string/text_view_pasos_mas_info" />
                </GridLayout>

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_view_tramites"
                    android:layout_gravity="bottom"
                    android:background="#9e000000"
                    android:textColor="#ffe3e3e3"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_telefonia"
                android:background="#949494"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true" >
                <ImageView
                    android:id="@+id/img_reclamosenosa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:onClick="onClickedreclamos"
                    android:scaleType="centerCrop" />
                <GridLayout
                    android:padding="6dp"
                    android:columnCount="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_info_tramites" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_nombre_reclamo" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_pasos_reclamos" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_pasos_mas_info" />
                </GridLayout>

                <TextView
                    android:id="@+id/txt24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_view_reclamos"
                    android:layout_gravity="bottom"
                    android:background="#8c000000"
                    android:textColor="#ffe3e3e3"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>